src/snapshots/lis_lang__lexer__tests__assign_str_escaped.snap
---
source: src/lexer.tests.rs
expression: tokens
---
[
    Token {
        sigil: Ident {
            name: "s",
        },
        range: Pos {
            offset: 1,
            line: 0,
            col: 1,
        }..Pos {
            offset: 2,
            line: 0,
            col: 2,
        },
    },
    Token {
        sigil: Eq,
        range: Pos {
            offset: 3,
            line: 0,
            col: 3,
        }..Pos {
            offset: 4,
            line: 0,
            col: 4,
        },
    },
    Token {
        sigil: Str {
            val: "hello\nworld\twith\\quotes\"",
        },
        range: Pos {
            offset: 5,
            line: 0,
            col: 5,
        }..Pos {
            offset: 35,
            line: 0,
            col: 35,
        },
    },
]
