src/snapshots/lis_lang__lexer__tests__assign_str_unclosed.snap
---
source: src/lexer.tests.rs
expression: tokens
---
[
    Span {
        range: Pos {
            offset: 1,
            line: 0,
            col: 1,
        }..Pos {
            offset: 2,
            line: 0,
            col: 2,
        },
        node: Ident {
            name: "s",
        },
    },
    Span {
        range: Pos {
            offset: 3,
            line: 0,
            col: 3,
        }..Pos {
            offset: 4,
            line: 0,
            col: 4,
        },
        node: Eq,
    },
    Span {
        range: Pos {
            offset: 5,
            line: 0,
            col: 5,
        }..Pos {
            offset: 12,
            line: 0,
            col: 12,
        },
        node: Str {
            val: "hello ",
        },
    },
]
