src/snapshots/lis_lang__lexer__tests__comment_block.snap
---
source: src/lexer.tests.rs
expression: tokens
---
[
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 3,
            line: 0,
            col: 3,
        },
        node: Keyword(
            Let,
        ),
    },
    Span {
        range: Pos {
            offset: 4,
            line: 0,
            col: 4,
        }..Pos {
            offset: 5,
            line: 0,
            col: 5,
        },
        node: Ident {
            name: "x",
        },
    },
    Span {
        range: Pos {
            offset: 6,
            line: 0,
            col: 6,
        }..Pos {
            offset: 7,
            line: 0,
            col: 7,
        },
        node: Eq,
    },
    Span {
        range: Pos {
            offset: 8,
            line: 0,
            col: 8,
        }..Pos {
            offset: 27,
            line: 0,
            col: 27,
        },
        node: Comment {
            body: " block comment ",
        },
    },
    Span {
        range: Pos {
            offset: 28,
            line: 0,
            col: 28,
        }..Pos {
            offset: 29,
            line: 0,
            col: 29,
        },
        node: Num {
            val: 1.0,
        },
    },
    Span {
        range: Pos {
            offset: 29,
            line: 0,
            col: 29,
        }..Pos {
            offset: 30,
            line: 0,
            col: 30,
        },
        node: Semi,
    },
]
