src/snapshots/lis_lang__lexer__tests__comparison_operators.snap
---
source: src/lexer.tests.rs
expression: tokens
---
[
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 1,
            line: 0,
            col: 1,
        },
        node: Ident {
            name: "a",
        },
    },
    Span {
        range: Pos {
            offset: 2,
            line: 0,
            col: 2,
        }..Pos {
            offset: 3,
            line: 0,
            col: 3,
        },
        node: Less,
    },
    Span {
        range: Pos {
            offset: 4,
            line: 0,
            col: 4,
        }..Pos {
            offset: 5,
            line: 0,
            col: 5,
        },
        node: Ident {
            name: "b",
        },
    },
    Span {
        range: Pos {
            offset: 6,
            line: 0,
            col: 6,
        }..Pos {
            offset: 8,
            line: 0,
            col: 8,
        },
        node: LessEq,
    },
    Span {
        range: Pos {
            offset: 9,
            line: 0,
            col: 9,
        }..Pos {
            offset: 10,
            line: 0,
            col: 10,
        },
        node: Ident {
            name: "c",
        },
    },
    Span {
        range: Pos {
            offset: 11,
            line: 0,
            col: 11,
        }..Pos {
            offset: 12,
            line: 0,
            col: 12,
        },
        node: Greater,
    },
    Span {
        range: Pos {
            offset: 13,
            line: 0,
            col: 13,
        }..Pos {
            offset: 14,
            line: 0,
            col: 14,
        },
        node: Ident {
            name: "d",
        },
    },
    Span {
        range: Pos {
            offset: 15,
            line: 0,
            col: 15,
        }..Pos {
            offset: 17,
            line: 0,
            col: 17,
        },
        node: GreaterEq,
    },
    Span {
        range: Pos {
            offset: 18,
            line: 0,
            col: 18,
        }..Pos {
            offset: 19,
            line: 0,
            col: 19,
        },
        node: Ident {
            name: "e",
        },
    },
]
